# redis-simple-cache

./: .gitignore  LICENSE  Pipfile  README  README.md  pyproject.toml  requirements.txt  setup.py  simplecache.py  tests.py
redis_cache/: __init__.py  rediscache.py  test_rediscache.py
redis_cache/test/: test_rediscache.py
