[tool.poetry]
name = "redis-simple-cache-py3"
version = "0.0.7"
description = "redis-simple-cache is a pythonic interface for creating a cache over redis. It provides simple decorators that can be added to any function to cache its return values."
authors = ["Vivek Narayanan, Flávio Juvenal, Sam Zaydel"]
packages = [
    { include = "redis_cache" }
]

[tool.poetry.dependencies]
python = ">=3.6"
redis_cache = "^0.1.5"
redis = "^3.3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
